<resources>

    <string name="app_name">膜 键</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="scan_text">将膜键包装上的二维码置于框内，即可自动扫描</string>
    <string name="scan_mokey_text">激活膜键</string>
    <string name="launch_tv">创造更好体验</string>
    <string name="version_code">版本：BetaV1.0</string>
    <string name="mokey_web">膜键官网</string>
    <string name="mokey_tel">客服电话：400-777-777</string>
    <string name="activation_code">激活码</string>
    <string name="scan_activation_code">扫描激活码</string>
    <string name="key_control">一键操控</string>
    <string name="key_control_text">点击箭头上方，触发按键</string>
    <string name="click_setting">单击设置</string>
    <string name="longclick_setting">长按设置</string>
    <string name="key_news">一键新闻</string>
    <string name="mysterious">神秘功能即将登场</string>
    <string name="mysterious2">敬请期待</string>
    <string name="mysterious3">神秘功能</string>
    <string name="download_app">下载客户端</string>
    <string name="cancel">取  消</string>
    <string name="download">下  载</string>
    <string name="network_error">网络错误</string>
    <string name="network_error_text">当前网络可能存在错误，无法正常连接</string>
    <string name="try_again">重试</string>
    <string name="seeting_network">设置网络</string>
    <string name="opinion">意见反馈</string>
    <string name="opinion_hint">请输入反馈意见</string>
    <string name="opinion_hint2">请输入需要反馈的文字内容</string>
    <string name="edit_num">还可输入200字</string>
    <string name="submmit">提交</string>
    <string name="sure">确定</string>
    <string name="know">知道了</string>
    <string name="statement">2014 膜键  版权所有</string>
    <string name="news_installed">已安装</string>
    <string name="news_no_installed">你还没有任何新闻应用</string>
    <string name="news_recommend">精品推荐</string>
    <string name="news_no_network">当前网络不可用，请检查网络设置</string>
    <string name="seeting_open_control">开启操控模式</string>
    <string name="seeting_check_version">检查更新</string>
    <string name="seeting_about_mokey">关于膜键</string>
    <string name="common_app">常用程序</string>
    <string name="confirmation_activation">确认激活</string>
    <string name="new_version">新版本</string>
    <string name="update_app">更新应用</string>
</resources>