<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_19"
        android:text="@string/network_error"
        android:textSize="@dimen/size_19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_19"
        android:text="@string/network_error_text"
        android:textSize="@dimen/size_15sp" />

    <TextView
        android:id="@+id/error_again"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_50"
        android:layout_below="@+id/error_content"
        android:layout_marginTop="@dimen/size_35"
        android:layout_toRightOf="@+id/error_title"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/error_set_internet"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_50"
        android:layout_alignBaseline="@+id/error_again"
        android:layout_alignBottom="@+id/error_again"
        android:layout_alignLeft="@+id/error_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/seeting_network"
        android:textColor="#ffffff" />

</RelativeLayout>