<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/code_rod"
        android:padding="@dimen/size_10" >

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opinion"
            android:textSize="@dimen/size_20sp" />

        <EditText
            android:id="@+id/feeback_edit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/size_100"
            android:layout_below="@+id/feedback_title"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/edit_code"
            android:gravity="top"
            android:hint="@string/opinion_hint2"
            android:padding="@dimen/size_5"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/feedback_cancle"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_50"
            android:layout_below="@+id/feeback_edit"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/button_circle"
            android:text="@string/cancel"
            android:textSize="@dimen/size_15sp" />

        <Button
            android:id="@+id/feedback_commit"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_50"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/feeback_edit"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/jh_rod"
            android:text="@string/submmit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_15sp" />
    </RelativeLayout>

</RelativeLayout>