<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/code_rod"
    android:padding="@dimen/size_17" >

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_version"
        android:textColor="#333333"
        android:textSize="@dimen/size_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_title"
        android:layout_marginTop="@dimen/size_10"
        android:padding="@dimen/size_5"
        android:text=""
        android:textColor="@color/textview_color"
        android:textSize="@dimen/size_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/update_cancle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40"
            android:layout_marginLeft="@dimen/size_17"
            android:layout_marginRight="@dimen/size_8"
            android:layout_weight="1"
            android:background="@drawable/btn_cancle_selector"
            android:padding="@dimen/size_5"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="@dimen/size_16" />

        <Button
            android:id="@+id/update_commit"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40"
            android:layout_marginBottom="@dimen/size_13"
            android:layout_marginLeft="@dimen/size_8"
            android:layout_marginRight="@dimen/size_17"
            android:layout_weight="1"
            android:background="@drawable/btn_ok_selector"
            android:padding="@dimen/size_5"
            android:text="@string/update_app"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/size_16sp" />
    </LinearLayout>

</RelativeLayout>