<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_5"
    android:background="@drawable/code_rod"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_10"
        android:singleLine="true"
        android:text="@string/download_app"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:layout_marginLeft="@dimen/size_25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_16"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="@dimen/size_3"
                android:textColor="#333333"
                android:textStyle="bold"
                android:textSize="@dimen/size_18sp" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_5"
                android:textColor="#666666"
                android:textSize="@dimen/size_16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_15"
        android:layout_marginLeft="@dimen/size_13"
        android:layout_marginRight="@dimen/size_13"
        android:layout_marginTop="@dimen/size_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40"
            android:layout_marginLeft="@dimen/size_10"
            android:layout_marginRight="@dimen/size_5"
            android:layout_weight="1"
            android:background="@drawable/btn_cancle_selector"
            android:padding="@dimen/size_5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40"
            android:layout_marginBottom="@dimen/size_13"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginRight="@dimen/size_10"
            android:layout_weight="1"
            android:background="@drawable/btn_ok_selector"
            android:padding="@dimen/size_5"
            android:text="@string/download"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>