<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_50"
        android:background="@color/header_color" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="@dimen/size_50"
            android:layout_height="fill_parent"
            android:background="@drawable/back_select"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_back_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:text="@string/click_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20sp" />

        <ImageView
            android:id="@+id/news_first_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:src="@drawable/first_select" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/news_sc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/size_8"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/rv_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/news_yaz"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_32"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/news_installed"
                android:textSize="@dimen/size_16sp" />

            <View
                android:id="@+id/v_diver1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/news_yaz"
                android:background="@color/textview_color" />

            <RelativeLayout
                android:id="@+id/news_yaz_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_diver1"
                android:background="#ffffff" >

                <com.net.mokey.view.NewsListView
                    android:id="@+id/news_yaz_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#FFF4F4F4"
                    android:divider="@null"
                    android:fadingEdge="none"
                    android:listSelector="#00000000" >
                </com.net.mokey.view.NewsListView>

                <TextView
                    android:id="@+id/news_yaz_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/news_yaz_lv"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/size_50"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:paddingLeft="@dimen/size_3"
                    android:text="@string/news_no_installed"
                    android:textColor="@color/textview_color"
                    android:textSize="@dimen/size_15sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:id="@+id/v_diver2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/news_yaz_rl"
                android:background="@color/textview_color" />

            <TextView
                android:id="@+id/news_tj"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32"
                android:layout_below="@id/v_diver2"
                android:layout_marginLeft="@dimen/size_16"
                android:layout_marginTop="@dimen/size_8"
                android:gravity="center_vertical"
                android:text="@string/news_recommend"
                android:textSize="@dimen/size_16sp" />

            <View
                android:id="@+id/v_diver3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/news_tj"
                android:background="@color/textview_color" />

            <RelativeLayout
                android:id="@+id/news_tj_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_diver3"
                android:background="#ffffff" >

                <com.net.mokey.view.NewsListView
                    android:id="@+id/news_tj_lv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_2"
                    android:cacheColorHint="#00000000"
                    android:divider="@null"
                    android:fadingEdge="none"
                    android:listSelector="#00000000" >
                </com.net.mokey.view.NewsListView>

                <TextView
                    android:id="@+id/tv_nowifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/news_tj_lv"
                    android:layout_marginLeft="@dimen/size_50"
                    android:layout_marginTop="@dimen/size_30"
                    android:drawableLeft="@drawable/notice"
                    android:gravity="center"
                    android:paddingBottom="@dimen/size_30"
                    android:text="@string/news_no_network"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:id="@+id/v_diver4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/news_tj_rl"
                android:background="@color/textview_color" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>